[package]
authors = ["manguluka <tali@manguluka.com>"]
description = "Find information on celestial bodies"
license = "MIT"
name = "astral-cli"
version = "0.2.0"

[[bin]]
bench = false
name = "astral"
path = "src/main.rs"

[dependencies]
astral = "0.1"
chrono = "0.4"
clap = "2"
colored = "1.5"
geocode = "0.1.1"
prettytable-rs = "0.6.7"
termion = "1.5.1"

[dependencies.tui]
git = "https://github.com/fdehau/tui-rs"


[replace."astral:0.1.0"]
path = "../astral"

[replace."geocode:0.1.1"]
path = "../geocode"
