[package]
authors = ["manguluka <tali@manguluka.com>"]
description = "Astronomy toolkit for finding the position of the Sun, Moon, planets and other celestial bodies at a place and time."
license = "MIT"
name = "astral-cli"
version = "0.2.0"

[[bin]]
bench = false
name = "astral"
path = "src/main.rs"

[dependencies]
astral = "^0.2.0"
chrono = "0.4"
clap = "2"
colored = "1.5"
geocode = "^0.1"
prettytable-rs = "0.6.7"


[replace."astral:0.1.0"]
path = "../astral"

[replace."geocode:0.1.1"]
path = "../geocode"
