[package]
authors = ["manguluka <tali@manguluka.com>"]
description = "Astronomy toolkit for finding the position of the Sun, Moon, planets and other celestial bodies at a place and time."
license = "MIT"
name = "astral-cli"
repository = "https://github.com/manguluka/astral-cli"
homepage = "https://github.com/manguluka/astral-cli"
keywords = ["astronomy", "planets","stars"]
categories = ["science", "algorithms","command-line-utilities"]
version = "0.3.2"

[[bin]]
bench = false
name = "astral"
path = "src/main.rs"

[dependencies]
astral = "^0.3.0"
chrono = "0.4"
clap = "2"
colored = "1.5"
geocode = "^0.1"
prettytable-rs = "0.6.7"


[replace."astral:0.3.1"]
path = "../astral"

# [replace."geocode:0.1.1"]
# path = "../geocode"
